trying to fix breadcrumb flex weirdness on mobile

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -63,6 +63,8 @@
 		a {
 			color: $ubc-blue;
 			text-decoration: none;
+			flex-basis: fit-content;
+
 
 			&:hover, &:focus, &:active {
 				outline: none;
